sfdx-source/force-app/main/default/objects/MxTag__c/MxTag__c.object-meta.xml
<CustomObject>
    <description>LEM-14102,14103: It store unique data specific to Mx.</description>
    <label>Mx Tag</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mx Tags</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>