sfdx-source/force-app/main/default/objects/MxTag__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>LEM-14103: It stores description of the Mx Tag.</description>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>Description of the Mx Tag</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>