sfdx-source/force-app/main/default/objects/MxTag__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16230: It is used to store the end date of Mx Tag.</description>
    <inlineHelpText>Indicates the date that the Mx Tag became inactive.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>