sfdx-source/force-app/main/default/objects/MxTag__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14103: It stores name of the Mx Tag.</description>
    <inlineHelpText>Name of the Mx Tag</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>