sfdx-source/force-app/main/default/objects/MxTag__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16230: It is used to store the start date of Mx Tag.</description>
    <inlineHelpText>Indicates the date that the Mx Tag became active.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>